--- a/readMat.ipynb
+++ b/readMat.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,153 +13,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Loading the mat file\n",
+    "matdata = scipyio.loadmat(\"dataset/S1_20140620T021349.mat\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'__header__': b'MATLAB 5.0 MAT-file, Platform: PCWIN64, Created on: Sat Nov 04 20:26:43 2017',\n",
-       " '__version__': '1.0',\n",
-       " '__globals__': [],\n",
-       " 'data_ACC': array([[[-0.0715332 ,  0.01977539,  0.07446289, ..., -0.47827148,\n",
-       "          -0.45922852, -0.44018555],\n",
-       "         [-0.34936523, -0.28295898, -0.31298828, ..., -0.07641602,\n",
-       "          -0.10913086, -0.09692383],\n",
-       "         [-1.07226562, -1.06347656, -1.04833984, ...,  0.76708984,\n",
-       "           0.7668457 ,  0.78857422]],\n",
-       " \n",
-       "        [[-0.07324219,  0.02490234,  0.07275391, ..., -0.47485352,\n",
-       "          -0.45751953, -0.46069336],\n",
-       "         [-0.34741211, -0.30322266, -0.31445312, ..., -0.07739258,\n",
-       "          -0.08129883, -0.08374023],\n",
-       "         [-1.05029297, -1.07202148, -1.05712891, ...,  0.77050781,\n",
-       "           0.7512207 ,  0.79296875]],\n",
-       " \n",
-       "        [[-0.07495117,  0.02587891,  0.05029297, ..., -0.47900391,\n",
-       "          -0.43945312, -0.45288086],\n",
-       "         [-0.36645508, -0.3125    , -0.32226562, ..., -0.07226562,\n",
-       "          -0.08056641, -0.10864258],\n",
-       "         [-1.0390625 , -1.07055664, -1.04785156, ...,  0.76196289,\n",
-       "           0.75854492,  0.75585938]],\n",
-       " \n",
-       "        ...,\n",
-       " \n",
-       "        [[-0.06811523,  0.01928711,  0.06323242, ..., -0.47680664,\n",
-       "          -0.44384766, -0.44970703],\n",
-       "         [-0.3293457 , -0.28491211, -0.31323242, ..., -0.08496094,\n",
-       "          -0.07226562, -0.10717773],\n",
-       "         [-1.03198242, -1.05297852, -1.05541992, ...,  0.7746582 ,\n",
-       "           0.77734375,  0.78051758]],\n",
-       " \n",
-       "        [[-0.06933594,  0.02636719,  0.07055664, ..., -0.47583008,\n",
-       "          -0.45239258, -0.48388672],\n",
-       "         [-0.34033203, -0.30419922, -0.31958008, ..., -0.08447266,\n",
-       "          -0.10888672, -0.10131836],\n",
-       "         [-1.03710938, -1.07666016, -1.07177734, ...,  0.78100586,\n",
-       "           0.7824707 ,  0.77270508]],\n",
-       " \n",
-       "        [[-0.06933594,  0.01831055,  0.06396484, ..., -0.49975586,\n",
-       "          -0.42333984, -0.46972656],\n",
-       "         [-0.3371582 , -0.30322266, -0.32617188, ..., -0.06518555,\n",
-       "          -0.08691406, -0.09423828],\n",
-       "         [-1.03271484, -1.06738281, -1.05761719, ...,  0.75463867,\n",
-       "           0.76928711,  0.77685547]]]),\n",
-       " 'data_EMG': array([[[ 4.66530839e-03,  6.30964927e-03,  1.91355082e-02, ...,\n",
-       "          -1.34224412e-02, -4.87186869e-03, -1.76977275e-02],\n",
-       "         [ 2.04509809e-02,  1.12426719e-02,  1.25581446e-02, ...,\n",
-       "          -1.06821001e-01,  2.43973990e-02, -2.69060363e-02],\n",
-       "         [ 3.67870387e-03, -1.30935731e-02,  4.01830716e-02, ...,\n",
-       "          -1.76977275e-02, -1.63822548e-02, -2.36173546e-02],\n",
-       "         [ 1.12426719e-02,  9.26946286e-03,  2.03436299e-03, ...,\n",
-       "          -1.76977275e-02, -1.58318694e-03, -6.51620957e-03],\n",
-       "         [-5.85847322e-03, -9.25450593e-04,  6.11539335e-05, ...,\n",
-       "          -1.99998047e-02, -1.93420683e-02, -1.70399911e-02],\n",
-       "         [ 9.92719921e-03,  2.90015535e-02,  1.91355082e-02, ...,\n",
-       "          -2.03286729e-02, -2.67714242e-04,  8.94059468e-03]],\n",
-       " \n",
-       "        [[ 5.32304475e-03,  4.66530839e-03,  1.91355082e-02, ...,\n",
-       "          -5.85847322e-03, -4.54300052e-03, -1.44090457e-02],\n",
-       "         [ 2.34107945e-02,  1.09138037e-02,  1.38736173e-02, ...,\n",
-       "          -1.13398364e-01,  3.62366535e-02, -2.42750909e-02],\n",
-       "         [ 3.02096751e-03, -1.50667821e-02,  3.85387307e-02, ...,\n",
-       "          -2.03286729e-02, -1.73688593e-02, -2.49328273e-02],\n",
-       "         [ 1.15715401e-02,  8.94059468e-03,  4.00757204e-03, ...,\n",
-       "          -1.76977275e-02, -1.91205512e-03, -4.54300052e-03],\n",
-       "         [-4.54300052e-03, -2.89865964e-03,  1.04775846e-03, ...,\n",
-       "          -2.13152774e-02, -1.99998047e-02, -1.76977275e-02],\n",
-       "         [ 1.22292765e-02,  3.09747626e-02,  2.34107945e-02, ...,\n",
-       "          -2.03286729e-02, -3.88526417e-03,  7.62512198e-03]],\n",
-       " \n",
-       "        [[ 7.95399016e-03,  4.33644022e-03,  2.11087172e-02, ...,\n",
-       "          -9.25450593e-04, -3.22752782e-03, -1.14492322e-02],\n",
-       "         [ 2.43973990e-02,  1.05849356e-02,  1.55179582e-02, ...,\n",
-       "          -1.11096287e-01,  4.08408080e-02, -2.36173546e-02],\n",
-       "         [ 2.03436299e-03, -1.57245184e-02,  3.32768399e-02, ...,\n",
-       "          -2.23018819e-02, -1.70399911e-02, -2.59194318e-02],\n",
-       "         [ 1.22292765e-02,  9.59833104e-03,  6.63851745e-03, ...,\n",
-       "          -1.67111230e-02, -2.56979147e-03, -2.24092329e-03],\n",
-       "         [-3.22752782e-03, -4.21413234e-03,  1.04775846e-03, ...,\n",
-       "          -2.36173546e-02, -2.03286729e-02, -1.96709365e-02],\n",
-       "         [ 1.45313537e-02,  3.16324990e-02,  2.60417399e-02, ...,\n",
-       "          -2.03286729e-02, -7.50281409e-03,  5.98078110e-03]],\n",
-       " \n",
-       "        ...,\n",
-       " \n",
-       "        [[ 9.59833104e-03,  2.20953218e-02, -6.11083260e-02, ...,\n",
-       "          -2.46039591e-02, -3.61143451e-02, -2.32884864e-02],\n",
-       "         [ 2.76860808e-02,  2.03436299e-03,  8.94059468e-03, ...,\n",
-       "           3.13036308e-02,  6.78079990e-02,  2.40685308e-02],\n",
-       "         [ 1.38736173e-02,  5.32304475e-03, -4.13762358e-02, ...,\n",
-       "           6.11539335e-05, -2.39462228e-02,  2.63706081e-02],\n",
-       "         [ 8.28285833e-03,  4.97202489e-02,  1.28870128e-02, ...,\n",
-       "          -9.25450593e-04, -1.14492322e-02, -2.67714242e-04],\n",
-       "         [ 3.02096751e-03, -5.52960504e-03, -2.89865964e-03, ...,\n",
-       "          -1.73688593e-02, -1.76977275e-02, -1.44090457e-02],\n",
-       "         [-1.47379139e-02,  9.26946286e-03, -3.47988724e-02, ...,\n",
-       "           3.90022109e-04, -2.03286729e-02,  6.11539335e-05]],\n",
-       " \n",
-       "        [[ 1.22292765e-02,  1.88066400e-02, -6.40681395e-02, ...,\n",
-       "          -2.69060363e-02, -3.94030268e-02, -2.39462228e-02],\n",
-       "         [ 2.80149490e-02,  3.02096751e-03,  6.63851745e-03, ...,\n",
-       "           1.97932445e-02,  5.72842171e-02,  2.04509809e-02],\n",
-       "         [ 1.32158810e-02,  4.66530839e-03, -3.44700043e-02, ...,\n",
-       "           3.90022109e-04, -2.49328273e-02,  2.86726854e-02],\n",
-       "         [ 7.95399016e-03,  5.43244034e-02,  1.45313537e-02, ...,\n",
-       "           1.37662664e-03, -9.47602314e-03, -2.67714242e-04],\n",
-       "         [ 3.34983569e-03, -5.52960504e-03, -2.56979147e-03, ...,\n",
-       "          -1.80265957e-02, -1.80265957e-02, -1.67111230e-02],\n",
-       "         [-1.21069685e-02,  1.51890900e-02, -3.24967952e-02, ...,\n",
-       "          -9.25450593e-04, -2.26307501e-02, -5.96582417e-04]],\n",
-       " \n",
-       "        [[ 1.38736173e-02,  1.51890900e-02, -5.94639852e-02, ...,\n",
-       "          -2.82215090e-02, -4.13762358e-02, -2.32884864e-02],\n",
-       "         [ 2.63706081e-02,  4.00757204e-03,  4.33644022e-03, ...,\n",
-       "           7.95399016e-03,  4.44583580e-02,  1.74911673e-02],\n",
-       "         [ 1.22292765e-02,  5.98078110e-03, -2.52616955e-02, ...,\n",
-       "          -1.91205512e-03, -2.62483000e-02,  2.80149490e-02],\n",
-       "         [ 7.95399016e-03,  5.89285580e-02,  1.55179582e-02, ...,\n",
-       "           1.70549481e-03, -7.50281409e-03, -1.25431877e-03],\n",
-       "         [ 2.69209934e-03, -5.20073687e-03, -1.25431877e-03, ...,\n",
-       "          -1.86843320e-02, -1.83554638e-02, -1.96709365e-02],\n",
-       "         [-1.01337595e-02,  1.97932445e-02, -3.15101907e-02, ...,\n",
-       "          -2.24092329e-03, -2.32884864e-02, -2.89865964e-03]]])}"
+       "dict_keys(['__header__', '__version__', '__globals__', 'data_ACC', 'data_EMG'])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Loading the mat file\n",
-    "matdata = scipyio.loadmat(\"dataset/S1_20140620T021349.mat\")\n",
-    "matdata"
+    "# keys of this matdata\n",
+    "matdata.keys()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -213,35 +98,149 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([[-0.03644321, -0.00026771,  0.0171623 ,  0.01683343, -0.00947602,\n",
-       "         0.02242419],\n",
-       "       [-0.02986585, -0.00125432,  0.04676044,  0.01453135, -0.0127647 ,\n",
-       "         0.02110872],\n",
-       "       [-0.02164415, -0.00059658,  0.06912347,  0.01157154, -0.01539565,\n",
-       "         0.02012211],\n",
-       "       ...,\n",
-       "       [ 0.05498214,  0.00795399, -0.05222889,  0.01288701, -0.004543  ,\n",
-       "         0.00137663],\n",
-       "       [ 0.0388676 ,  0.00894059, -0.05716191,  0.01518909, -0.00322753,\n",
-       "        -0.00487187],\n",
-       "       [ 0.0243974 ,  0.00926946, -0.06143719,  0.01617569, -0.0035564 ,\n",
-       "        -0.01243584]])"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(20000, 6, 9)\n",
+      "(20000, 6, 9)\n",
+      "(20000, 6, 9)\n",
+      "(20000, 6, 9)\n",
+      "(20000, 6, 9)\n",
+      "(20000, 6, 9)\n",
+      "(20000, 6, 9)\n"
+     ]
     }
    ],
    "source": [
-    "dataori = data_emg[:, :, 0:8]\n",
-    "dataori[:, :, 7]"
+    "# the first class from rotation  1\n",
+    "c1o1 = data_emg[:, :, 0:9]\n",
+    "print(c1o1.shape)\n",
+    "\n",
+    "# the second class from rotation  1\n",
+    "c2o1 = data_emg[:, :, 9:18]\n",
+    "print(c2o1.shape)\n",
+    "\n",
+    "# the third class from rotation 1\n",
+    "c3o1 = data_emg[:, :, 18:27]\n",
+    "print(c3o1.shape)\n",
+    "\n",
+    "# the fourth class from rotation 1\n",
+    "c4o1 = data_emg[:, :, 27:36]\n",
+    "print(c4o1.shape)\n",
+    "\n",
+    "# the fifth class from rotation 1\n",
+    "c5o1 = data_emg[:, :, 36:45]\n",
+    "print(c5o1.shape)\n",
+    "\n",
+    "# the sixth class from rotation 1\n",
+    "c6o1 = data_emg[:, :, 45:54]\n",
+    "print(c6o1.shape)\n",
+    "\n",
+    "# the seventh class from rotation 1\n",
+    "c7o1 = data_emg[:, :, 54:63]\n",
+    "print(c7o1.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(20000, 6, 9)\n",
+      "(20000, 6, 9)\n",
+      "(20000, 6, 9)\n",
+      "(20000, 6, 9)\n",
+      "(20000, 6, 9)\n",
+      "(20000, 6, 9)\n",
+      "(20000, 6, 9)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# the first class from rotation 2\n",
+    "c1o2 = data_emg[:, :, 63:72]\n",
+    "print(c1o2.shape)\n",
+    "\n",
+    "# the second class from rotation 2\n",
+    "c2o2 = data_emg[:, :, 72:81]\n",
+    "print(c2o2.shape)\n",
+    "\n",
+    "# the third class from rotation 2\n",
+    "c3o2 = data_emg[:, :, 81:90]\n",
+    "print(c3o2.shape)\n",
+    "\n",
+    "# the fourth class from rotation 2\n",
+    "c4o2 = data_emg[:, :, 90:99]\n",
+    "print(c4o2.shape)\n",
+    "\n",
+    "# the fifth class from rotation 2\n",
+    "c5o2 = data_emg[:, :, 99:108]\n",
+    "print(c5o2.shape)\n",
+    "\n",
+    "# the sixth class from rotation 2\n",
+    "c6o2 = data_emg[:, :, 108:117]\n",
+    "print(c6o2.shape)\n",
+    "\n",
+    "# the seventh class from rotation 2\n",
+    "c7o2 = data_emg[:, :, 117:126]\n",
+    "print(c7o2.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(20000, 6, 9)\n",
+      "(20000, 6, 9)\n",
+      "(20000, 6, 9)\n",
+      "(20000, 6, 9)\n",
+      "(20000, 6, 9)\n",
+      "(20000, 6, 9)\n",
+      "(20000, 6, 9)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# the first class from rotation 3\n",
+    "c1o3 = data_emg[:, :, 126:135]\n",
+    "print(c1o3.shape)\n",
+    "\n",
+    "# the second class from rotation 3\n",
+    "c2o3 = data_emg[:, :, 135:144]\n",
+    "print(c2o3.shape)\n",
+    "\n",
+    "# the third class from rotation 3\n",
+    "c3o3 = data_emg[:, :, 144:153]\n",
+    "print(c3o3.shape)\n",
+    "\n",
+    "# the fourth class from rotation 3\n",
+    "c4o3 = data_emg[:, :, 153:162]\n",
+    "print(c4o3.shape)\n",
+    "\n",
+    "# the fifth class from rotation 3\n",
+    "c5o3 = data_emg[:, :, 162:171]\n",
+    "print(c5o3.shape)\n",
+    "\n",
+    "# the sixth class from rotation 3\n",
+    "c6o3 = data_emg[:, :, 171:180]\n",
+    "print(c6o3.shape)\n",
+    "\n",
+    "# the seventh class from rotation 3\n",
+    "c7o3 = data_emg[:, :, 180:189]\n",
+    "print(c7o3.shape)"
    ]
   }
  ],
